[gd_scene load_steps=13 format=3 uid="uid://bqb48ynw6jca5"]

[ext_resource type="Script" path="res://scripts/basic_fish.gd" id="1_notb4"]
[ext_resource type="PackedScene" uid="uid://b28xqmfk7wf74" path="res://modelScenes/cowboy_fish_model.tscn" id="2_b38by"]
[ext_resource type="Script" path="res://scripts/finite_state_machine_resources/finite_state_machine.gd" id="2_gky5p"]
[ext_resource type="PackedScene" uid="uid://c77smiruvlkwm" path="res://gamePlayScenes/shoot_the_bottle_game.tscn" id="3_1ascm"]
[ext_resource type="Script" path="res://scripts/cowboy_fish_states/spawnmove_state.gd" id="3_ucqs4"]

[sub_resource type="Animation" id="Animation_bgbig"]
resource_name = "looping_swim"
length = 0.84
loop_mode = 2
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone_2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.0133092, 1, 1.17165e-11, 0.00534738, 0.115342, 0.993312, 0.0466425, 1, 1.75785e-11, 0.00517311, 0.111583, 0.993742, 0.0799759, 1, -2.92718e-11, 0.00495424, 0.106862, 0.994262, 0.113309, 1, -2.9253e-11, 0.00466703, 0.100666, 0.994909, 0.146643, 1, -1.16994e-11, 0.00432173, 0.0932184, 0.995636, 0.179976, 1, 0, 0.00391371, 0.0844176, 0.996423, 0.213309, 1, 1.45808e-12, 0.00343831, 0.0741633, 0.99724, 0.246643, 1, 7.29017e-12, 0.00289081, 0.0623539, 0.99805, 0.279976, 1, 1.45811e-12, 0.00223791, 0.0482711, 0.998832, 0.313309, 1, -1.09176e-12, 0.0014988, 0.0323287, 0.999476, 0.346643, 1, -1.09178e-12, 0.000668918, 0.0144284, 0.999896, 0.379976, 1, -3.63973e-13, -0.000250406, -0.0054012, 0.999985, 0.446643, 1, -3.63973e-13, -0.00225679, -0.0486782, 0.998812, 0.479976, 1, 8.75824e-12, -0.00316645, -0.0682994, 0.99766, 0.513309, 1, 8.75799e-12, -0.00391586, -0.084464, 0.996419, 0.546643, 1, -8.77605e-12, -0.0044405, -0.0957804, 0.995393, 0.579976, 1, -4.388e-11, -0.00467614, -0.100863, 0.994889, 0.613309, 1, -3.21752e-11, -0.00462188, -0.0996926, 0.995008, 0.646643, 1, -1.16996e-11, -0.00449431, -0.096941, 0.99528, 0.679976, 1, 0, -0.00430147, -0.0927816, 0.995677, 0.713309, 1, 0, -0.00405141, -0.0873877, 0.996166, 0.746642, 1, 0, -0.00375214, -0.0809326, 0.996713, 0.779976, 1, 0, -0.00340352, -0.073413, 0.997296, 0.813309, 1, -4.37385e-12, -0.00303006, -0.0653575, 0.997857)
tracks/1/type = "rotation_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone.001_5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0.0133092, 1, -0.00138147, 0.0231206, 0.997949, 0.0596696, 0.0466425, 1, -0.00135502, 0.0231222, 0.998017, 0.0585285, 0.0799759, 1, -0.00130373, 0.0231251, 0.998144, 0.0563138, 0.113309, 1, -0.00122392, 0.0231295, 0.998333, 0.0528683, 0.146643, 1, -0.00112625, 0.0231345, 0.998547, 0.0486521, 0.179976, 1, -0.00101304, 0.0231397, 0.998773, 0.0437647, 0.213309, 1, -0.000886631, 0.0231449, 0.998998, 0.0383069, 0.246643, 1, -0.000749374, 0.0231498, 0.999207, 0.032381, 0.279976, 1, -0.000602419, 0.0231541, 0.999393, 0.0260331, 0.379976, 1, -0.000147167, 0.0231615, 0.999711, 0.00640172, 0.413309, 1, 1.14807e-06, 0.023162, 0.999732, 2.65988e-08, 0.446643, 1, 0.000140739, 0.0231616, 0.999714, -0.00602509, 0.479976, 1, 0.000271506, 0.0231604, 0.999664, -0.0116524, 0.513309, 1, -0.000391184, -0.0231587, -0.99959, 0.0168094, 0.546643, 1, -0.000497973, -0.0231566, -0.999502, 0.0214236, 0.579976, 1, -0.000590542, -0.0231545, -0.999408, 0.0254237, 0.613309, 1, -0.00066086, -0.0231526, -0.999327, 0.0284596, 0.646643, 1, -0.000711897, -0.023151, -0.999261, 0.0306643, 0.679976, 1, -0.000742028, -0.0231501, -0.999221, 0.0319655, 0.746642, 1, -0.000738987, -0.0231503, -0.999225, 0.0318324, 0.779976, 1, -0.000706303, -0.0231513, -0.999269, 0.0304208, 0.813309, 1, -0.00066107, -0.0231526, -0.999326, 0.0284667)
tracks/2/type = "rotation_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone.002_4")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0.0133092, 1, -0.0015505, 8.65599e-05, -0.0557457, 0.998444, 0.0466425, 1, -0.00155001, 9.51531e-05, -0.0612797, 0.998119, 0.0799759, 1, -0.00154962, 0.00010149, -0.0653608, 0.99786, 0.113309, 1, -0.00154947, 0.000103824, -0.0668638, 0.997761, 0.146643, 1, -0.00154951, 0.00010306, -0.0663716, 0.997794, 0.179976, 1, -0.00154973, 9.9607e-05, -0.0641481, 0.997939, 0.213309, 1, -0.00155009, 9.37759e-05, -0.0603927, 0.998174, 0.246643, 1, -0.00155054, 8.57762e-05, -0.0552408, 0.998472, 0.279976, 1, -0.00155107, 7.53071e-05, -0.0484986, 0.998822, 0.313309, 1, -0.00155159, 6.33011e-05, -0.0407666, 0.999168, 0.346643, 1, -0.00155206, 4.99688e-05, -0.0321804, 0.999481, 0.379976, 1, -0.00155243, 3.55209e-05, -0.0228758, 0.999737, 0.413309, 1, -0.00155269, 2.01688e-05, -0.012989, 0.999914, 0.446643, 1, -0.00155279, 4.03388e-06, -0.00259786, 0.999995, 0.546643, 1, -0.00155206, -4.52179e-05, 0.0291208, 0.999575, 0.579976, 1, -0.00155149, -6.12469e-05, 0.0394439, 0.999221, 0.613309, 1, -0.00155079, -7.64396e-05, 0.0492281, 0.998786, 0.646643, 1, -0.00155, -9.07014e-05, 0.0584129, 0.998291, 0.679976, 1, -0.00154916, -0.000103832, 0.0668689, 0.997761, 0.713309, 1, -0.0015483, -0.00011563, 0.0744673, 0.997222, 0.746642, 1, -0.00154749, -0.000125898, 0.0810795, 0.996706, 0.779976, 1, -0.00154682, -0.000133726, 0.086121, 0.996283, 0.813309, 1, -0.00154631, -0.000139425, 0.0897911, 0.99596)
tracks/3/type = "rotation_3d"
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone.003_3")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0.0133092, 1, 0.127429, -0.00869906, -0.0692383, 0.98939, 0.0466425, 1, 0.127308, -0.0102438, -0.081533, 0.988453, 0.0799759, 1, 0.127175, -0.0117206, -0.0932874, 0.987414, 0.113309, 1, 0.127042, -0.0130195, -0.103626, 0.986384, 0.146643, 1, 0.126918, -0.0141195, -0.112381, 0.985425, 0.179976, 1, 0.126815, -0.0149777, -0.119212, 0.984623, 0.213309, 1, 0.126742, -0.0155515, -0.123779, 0.98406, 0.246643, 1, 0.12671, -0.0157983, -0.125743, 0.983811, 0.279976, 1, 0.126787, -0.0152013, -0.120991, 0.984406, 0.313309, 1, 0.126949, -0.013856, -0.110284, 0.985662, 0.346643, 1, 0.127156, -0.0119088, -0.0947853, 0.987272, 0.379976, 1, 0.127368, -0.00950679, -0.0756672, 0.988919, 0.413309, 1, 0.12755, -0.00679861, -0.0541121, 0.990332, 0.446643, 1, 0.127675, -0.00398354, -0.0317063, 0.991301, 0.479976, 1, 0.127734, -0.00131189, -0.0104419, 0.991753, 0.513309, 1, 0.127735, 0.00112962, 0.00899063, 0.991767, 0.546643, 1, 0.127696, 0.00330781, 0.0263274, 0.991458, 0.579976, 1, 0.127628, 0.00524311, 0.0417309, 0.99093, 0.613309, 1, 0.127546, 0.00687979, 0.0547577, 0.990296, 0.646643, 1, 0.127457, 0.00831139, 0.0661521, 0.989601, 0.679976, 1, 0.127365, 0.0095508, 0.0760169, 0.988892, 0.713309, 1, 0.127277, 0.0106109, 0.0844546, 0.988208, 0.746642, 1, 0.127196, 0.0115046, 0.0915673, 0.987575, 0.779976, 1, 0.127127, 0.0122016, 0.0971155, 0.987045, 0.813309, 1, 0.127069, 0.0127698, 0.101638, 0.98659)
tracks/4/type = "rotation_3d"
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0.0133092, 1, 0.719971, 0.0957615, 0, 0.687366, 0.0466425, 1, 0.720074, 0.094277, -1.08348e-09, 0.687463, 0.0799759, 1, 0.72027, 0.0913613, -5.41741e-09, 0.687651, 0.113309, 1, 0.720572, 0.0866954, -1.08349e-09, 0.687939, 0.146643, 1, 0.720928, 0.0808331, 0, 0.688279, 0.179976, 1, 0.72132, 0.073852, 2.16295e-09, 0.688653, 0.213309, 1, 0.721726, 0.0658298, 3.78552e-09, 0.689041, 0.246643, 1, 0.722126, 0.0568452, -2.70175e-09, 0.689423, 0.279976, 1, 0.722505, 0.0467401, 1.61967e-09, 0.689784, 0.313309, 1, 0.722828, 0.0359173, 2.7043e-10, 0.690094, 0.346643, 1, 0.723079, 0.0244618, -1.07939e-09, 0.690332, 0.379976, 1, 0.723239, 0.01246, -5.39549e-10, 0.690485, 0.413309, 1, 0.723295, 0, 0, 0.690539, 0.446643, 1, 0.723236, -0.0128137, 1.07911e-09, 0.690482, 0.479976, 1, 0.723061, -0.0254612, 5.39565e-10, 0.690315, 0.513309, 1, 0.722783, -0.0376164, 2.16029e-09, 0.69005, 0.546643, 1, 0.722428, -0.0489556, 4.3205e-09, 0.689711, 0.579976, 1, 0.722028, -0.0591582, 0, 0.68933, 0.613309, 1, 0.721659, -0.0672159, 0, 0.688977, 0.646643, 1, 0.721355, -0.0731972, 3.24622e-09, 0.688687, 0.679976, 1, 0.721159, -0.0767924, 1.08167e-09, 0.6885, 0.713309, 1, 0.721096, -0.0779134, -4.32907e-09, 0.68844, 0.746642, 1, 0.721165, -0.0766919, 0, 0.688505, 0.779976, 1, 0.721349, -0.073312, 4.32719e-09, 0.688681, 0.813309, 1, 0.72159, -0.068632, 2.1636e-09, 0.688911)

[sub_resource type="Animation" id="Animation_0806g"]
resource_name = "swim"
length = 1.70833
loop_mode = 2
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone_2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.0333333, 1, 0, 0, 0, 1, 0.0666667, 1, 0, 0.000355973, 0.00767825, 0.99997, 0.1, 1, -1.45676e-12, 0.00116014, 0.025024, 0.999686, 0.133333, 1, -2.91336e-12, 0.00234843, 0.0506551, 0.998713, 0.166667, 1, 0, 0.00370039, 0.0798163, 0.996803, 0.2, 1, -2.34275e-11, 0.00482948, 0.10417, 0.994548, 0.233333, 1, -1.17134e-11, 0.00546497, 0.117878, 0.993013, 0.266667, 1, 0, 0.0056959, 0.122859, 0.992408, 0.333333, 1, 0, 0.00564671, 0.121798, 0.992539, 0.366667, 1, 2.34529e-11, 0.0055798, 0.120355, 0.992715, 0.4, 1, 1.17264e-11, 0.00548148, 0.118234, 0.992971, 0.433333, 1, 1.17165e-11, 0.00534738, 0.115342, 0.993312, 0.466667, 1, 1.75785e-11, 0.00517311, 0.111583, 0.993742, 0.5, 1, -2.92718e-11, 0.00495424, 0.106862, 0.994262, 0.533333, 1, -2.9253e-11, 0.00466703, 0.100666, 0.994909, 0.566667, 1, -1.16994e-11, 0.00432173, 0.0932184, 0.995636, 0.6, 1, 0, 0.00391371, 0.0844176, 0.996423, 0.633333, 1, 1.45808e-12, 0.00343831, 0.0741633, 0.99724, 0.666667, 1, 7.29017e-12, 0.00289081, 0.0623539, 0.99805, 0.7, 1, 1.45811e-12, 0.00223791, 0.0482711, 0.998832, 0.733333, 1, -1.09176e-12, 0.0014988, 0.0323287, 0.999476, 0.766667, 1, -1.09178e-12, 0.000668918, 0.0144284, 0.999896, 0.8, 1, -3.63973e-13, -0.000250406, -0.0054012, 0.999985, 0.866667, 1, -3.63973e-13, -0.00225679, -0.0486782, 0.998812, 0.9, 1, 8.75824e-12, -0.00316645, -0.0682994, 0.99766, 0.933333, 1, 8.75799e-12, -0.00391586, -0.084464, 0.996419, 0.966667, 1, -8.77605e-12, -0.0044405, -0.0957804, 0.995393, 1, 1, -4.388e-11, -0.00467614, -0.100863, 0.994889, 1.03333, 1, -3.21752e-11, -0.00462188, -0.0996926, 0.995008, 1.06667, 1, -1.16996e-11, -0.00449431, -0.096941, 0.99528, 1.1, 1, 0, -0.00430147, -0.0927816, 0.995677, 1.13333, 1, 0, -0.00405141, -0.0873877, 0.996166, 1.16667, 1, 0, -0.00375214, -0.0809326, 0.996713, 1.2, 1, 0, -0.00340352, -0.073413, 0.997296, 1.23333, 1, -4.37385e-12, -0.00303006, -0.0653575, 0.997857, 1.26667, 1, -2.62247e-15, -0.00263995, -0.0569429, 0.998374, 1.33333, 1, 3.64086e-12, -0.00184271, -0.0397468, 0.999208, 1.36667, 1, 7.28185e-13, -0.00146035, -0.0314994, 0.999503, 1.4, 1, -2.18325e-12, -0.00110259, -0.0237826, 0.999717, 1.43333, 1, -3.63855e-12, -0.000777661, -0.0167739, 0.999859, 1.46667, 1, -3.63821e-12, -0.000493767, -0.0106504, 0.999943, 1.5, 1, -3.63804e-12, -0.000259097, -0.00558866, 0.999984, 1.53333, 1, -3.63231e-12, -0.000106356, -0.00229407, 0.999997, 1.56667, 1, -1.45235e-12, -2.72681e-05, -0.000588167, 1, 1.70833, 1, 0, 0, 0, 1)
tracks/1/type = "rotation_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone.001_5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1.14807e-06, 0.023162, 0.999732, 2.65988e-08, 0.0666667, 1, 1.14807e-06, 0.023162, 0.999732, 2.65988e-08, 0.1, 1, -2.27704e-05, 0.023162, 0.999731, 0.00103241, 0.133333, 1, -9.01844e-05, 0.0231618, 0.999724, 0.00394217, 0.166667, 1, -0.000216328, 0.023161, 0.999688, 0.00938685, 0.2, 1, -0.000395159, 0.0231586, 0.999586, 0.0170865, 0.233333, 1, -0.000593129, 0.0231543, 0.999403, 0.0256316, 0.266667, 1, -0.000797475, 0.0231482, 0.999138, 0.0344569, 0.3, 1, -0.000995268, 0.0231405, 0.998807, 0.0429974, 0.333333, 1, -0.00117343, 0.0231321, 0.998446, 0.0506889, 0.366667, 1, -0.00129937, 0.0231254, 0.998155, 0.0561257, 0.4, 1, -0.00136667, 0.0231215, 0.997988, 0.0590306, 0.433333, 1, -0.00138147, 0.0231206, 0.997949, 0.0596696, 0.466667, 1, -0.00135502, 0.0231222, 0.998017, 0.0585285, 0.5, 1, -0.00130373, 0.0231251, 0.998144, 0.0563138, 0.533333, 1, -0.00122392, 0.0231295, 0.998333, 0.0528683, 0.566667, 1, -0.00112625, 0.0231345, 0.998547, 0.0486521, 0.6, 1, -0.00101304, 0.0231397, 0.998773, 0.0437647, 0.633333, 1, -0.000886631, 0.0231449, 0.998998, 0.0383069, 0.666667, 1, -0.000749374, 0.0231498, 0.999207, 0.032381, 0.7, 1, -0.000602419, 0.0231541, 0.999393, 0.0260331, 0.8, 1, -0.000147167, 0.0231615, 0.999711, 0.00640172, 0.833333, 1, 1.14807e-06, 0.023162, 0.999732, 2.65988e-08, 0.866667, 1, 0.000140739, 0.0231616, 0.999714, -0.00602509, 0.9, 1, 0.000271506, 0.0231604, 0.999664, -0.0116524, 0.933333, 1, -0.000391184, -0.0231587, -0.99959, 0.0168094, 0.966667, 1, -0.000497973, -0.0231566, -0.999502, 0.0214236, 1, 1, -0.000590542, -0.0231545, -0.999408, 0.0254237, 1.03333, 1, -0.00066086, -0.0231526, -0.999327, 0.0284596, 1.06667, 1, -0.000711897, -0.023151, -0.999261, 0.0306643, 1.1, 1, -0.000742028, -0.0231501, -0.999221, 0.0319655, 1.16667, 1, -0.000738987, -0.0231503, -0.999225, 0.0318324, 1.2, 1, -0.000706303, -0.0231513, -0.999269, 0.0304208, 1.23333, 1, -0.00066107, -0.0231526, -0.999326, 0.0284667, 1.26667, 1, -0.00060536, -0.0231542, -0.999392, 0.0260616, 1.3, 1, -0.000541296, -0.0231557, -0.99946, 0.0232959, 1.33333, 1, -0.000471046, -0.0231573, -0.999526, 0.0202595, 1.4, 1, -0.000322197, -0.0231598, -0.999636, 0.0138255, 1.43333, 1, -0.000249472, -0.0231607, -0.999675, 0.0106976, 1.46667, 1, 0.00018071, 0.0231614, 0.999702, -0.00775035, 1.5, 1, 0.000118704, 0.0231618, 0.999719, -0.00507404, 1.53333, 1, 6.92418e-05, 0.023162, 0.999727, -0.00293911, 1.56667, 1, 3.23204e-05, 0.023162, 0.999731, -0.00134548, 1.63333, 1, 1.14807e-06, 0.023162, 0.999732, 2.65988e-08, 1.70833, 1, 1.14807e-06, 0.023162, 0.999732, 2.65988e-08)
tracks/2/type = "rotation_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone.002_4")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -0.00155279, -1.11695e-13, 3.56639e-09, 0.999999, 0.133333, 1, -0.00155279, 5.84715e-07, -0.000376561, 0.999999, 0.166667, 1, -0.00155279, 2.92357e-06, -0.00188282, 0.999997, 0.2, 1, -0.00155277, 9.2733e-06, -0.00597208, 0.999981, 0.233333, 1, -0.00155271, 1.78807e-05, -0.0115154, 0.999933, 0.266667, 1, -0.00155257, 2.82448e-05, -0.01819, 0.999833, 0.3, 1, -0.00155233, 3.98634e-05, -0.0256724, 0.999669, 0.366667, 1, -0.00155154, 6.45996e-05, -0.041603, 0.999133, 0.4, 1, -0.00155103, 7.62089e-05, -0.0490796, 0.998794, 0.433333, 1, -0.0015505, 8.65599e-05, -0.0557457, 0.998444, 0.466667, 1, -0.00155001, 9.51531e-05, -0.0612797, 0.998119, 0.5, 1, -0.00154962, 0.00010149, -0.0653608, 0.99786, 0.533333, 1, -0.00154947, 0.000103824, -0.0668638, 0.997761, 0.566667, 1, -0.00154951, 0.00010306, -0.0663716, 0.997794, 0.6, 1, -0.00154973, 9.9607e-05, -0.0641481, 0.997939, 0.633333, 1, -0.00155009, 9.37759e-05, -0.0603927, 0.998174, 0.666667, 1, -0.00155054, 8.57762e-05, -0.0552408, 0.998472, 0.7, 1, -0.00155107, 7.53071e-05, -0.0484986, 0.998822, 0.733333, 1, -0.00155159, 6.33011e-05, -0.0407666, 0.999168, 0.766667, 1, -0.00155206, 4.99688e-05, -0.0321804, 0.999481, 0.8, 1, -0.00155243, 3.55209e-05, -0.0228758, 0.999737, 0.833333, 1, -0.00155269, 2.01688e-05, -0.012989, 0.999914, 0.866667, 1, -0.00155279, 4.03388e-06, -0.00259786, 0.999995, 0.966667, 1, -0.00155206, -4.52179e-05, 0.0291208, 0.999575, 1, 1, -0.00155149, -6.12469e-05, 0.0394439, 0.999221, 1.03333, 1, -0.00155079, -7.64396e-05, 0.0492281, 0.998786, 1.06667, 1, -0.00155, -9.07014e-05, 0.0584129, 0.998291, 1.1, 1, -0.00154916, -0.000103832, 0.0668689, 0.997761, 1.13333, 1, -0.0015483, -0.00011563, 0.0744673, 0.997222, 1.16667, 1, -0.00154749, -0.000125898, 0.0810795, 0.996706, 1.2, 1, -0.00154682, -0.000133726, 0.086121, 0.996283, 1.23333, 1, -0.00154631, -0.000139425, 0.0897911, 0.99596, 1.26667, 1, -0.001546, -0.000142795, 0.0919618, 0.995761, 1.3, 1, -0.00154596, -0.000143125, 0.0921742, 0.995742, 1.33333, 1, -0.00154633, -0.000139187, 0.0896382, 0.995973, 1.36667, 1, -0.00154726, -0.000128624, 0.0828356, 0.996562, 1.4, 1, -0.00154839, -0.000114497, 0.0737374, 0.997277, 1.43333, 1, -0.00154956, -9.77452e-05, 0.0629492, 0.998016, 1.46667, 1, -0.00155064, -7.9315e-05, 0.0510799, 0.998693, 1.5, 1, -0.00155153, -6.01582e-05, 0.0387425, 0.999248, 1.53333, 1, -0.00155216, -4.19466e-05, 0.0270141, 0.999634, 1.56667, 1, -0.00155253, -2.58747e-05, 0.0166636, 0.99986, 1.6, 1, -0.00155271, -1.28944e-05, 0.00830414, 0.999964, 1.63333, 1, -0.00155278, -3.9542e-06, 0.00254655, 0.999996, 1.66667, 1, -0.00155279, -1.11695e-13, 3.56639e-09, 0.999999, 1.70833, 1, -0.00155279, -1.11695e-13, 3.56639e-09, 0.999999)
tracks/3/type = "rotation_3d"
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7/GLTF_created_0/Skeleton3D:Bone.003_3")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.127741, -2.2567e-13, -2.9339e-07, 0.991808, 0.166667, 1, 0.127741, 2.30746e-10, -2.9336e-07, 0.991808, 0.2, 1, 0.12774, -0.000248715, -0.00197988, 0.991806, 0.233333, 1, 0.127738, -0.000826895, -0.00658177, 0.991786, 0.266667, 1, 0.127729, -0.001691, -0.0134594, 0.991716, 0.3, 1, 0.127708, -0.00279737, -0.0222653, 0.991558, 0.333333, 1, 0.127671, -0.0041022, -0.0326508, 0.99127, 0.366667, 1, 0.127612, -0.00558366, -0.0444421, 0.990812, 0.4, 1, 0.127531, -0.00713083, -0.0567564, 0.990184, 0.433333, 1, 0.127429, -0.00869906, -0.0692383, 0.98939, 0.466667, 1, 0.127308, -0.0102438, -0.081533, 0.988453, 0.5, 1, 0.127175, -0.0117206, -0.0932874, 0.987414, 0.533333, 1, 0.127042, -0.0130195, -0.103626, 0.986384, 0.566667, 1, 0.126918, -0.0141195, -0.112381, 0.985425, 0.6, 1, 0.126815, -0.0149777, -0.119212, 0.984623, 0.633333, 1, 0.126742, -0.0155515, -0.123779, 0.98406, 0.666667, 1, 0.12671, -0.0157983, -0.125743, 0.983811, 0.7, 1, 0.126787, -0.0152013, -0.120991, 0.984406, 0.733333, 1, 0.126949, -0.013856, -0.110284, 0.985662, 0.766667, 1, 0.127156, -0.0119088, -0.0947853, 0.987272, 0.8, 1, 0.127368, -0.00950679, -0.0756672, 0.988919, 0.833333, 1, 0.12755, -0.00679861, -0.0541121, 0.990332, 0.866667, 1, 0.127675, -0.00398354, -0.0317063, 0.991301, 0.9, 1, 0.127734, -0.00131189, -0.0104419, 0.991753, 0.933333, 1, 0.127735, 0.00112962, 0.00899063, 0.991767, 0.966667, 1, 0.127696, 0.00330781, 0.0263274, 0.991458, 1, 1, 0.127628, 0.00524311, 0.0417309, 0.99093, 1.03333, 1, 0.127546, 0.00687979, 0.0547577, 0.990296, 1.06667, 1, 0.127457, 0.00831139, 0.0661521, 0.989601, 1.1, 1, 0.127365, 0.0095508, 0.0760169, 0.988892, 1.13333, 1, 0.127277, 0.0106109, 0.0844546, 0.988208, 1.16667, 1, 0.127196, 0.0115046, 0.0915673, 0.987575, 1.2, 1, 0.127127, 0.0122016, 0.0971155, 0.987045, 1.23333, 1, 0.127069, 0.0127698, 0.101638, 0.98659, 1.26667, 1, 0.12702, 0.0132215, 0.105233, 0.986214, 1.3, 1, 0.126982, 0.0135688, 0.107997, 0.985915, 1.33333, 1, 0.126953, 0.013824, 0.110028, 0.98569, 1.36667, 1, 0.126935, 0.0139806, 0.111274, 0.985551, 1.43333, 1, 0.126917, 0.0141379, 0.112527, 0.985409, 1.5, 1, 0.126913, 0.014168, 0.112766, 0.985381, 1.53333, 1, 0.127045, 0.0129955, 0.103434, 0.986404, 1.56667, 1, 0.127278, 0.0105986, 0.0843564, 0.988217, 1.6, 1, 0.127508, 0.00751547, 0.0598172, 0.990004, 1.63333, 1, 0.127665, 0.00429072, 0.0341506, 0.99122, 1.66667, 1, 0.127732, 0.00147436, 0.0117345, 0.991738, 1.70833, 1, 0.127741, -2.2567e-13, -2.9339e-07, 0.991808)
tracks/4/type = "rotation_3d"
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/path = NodePath("Sketchfab_model/root/GLTF_SceneRootNode/Armature_7")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0.723295, 1.16164e-16, 0, 0.690539, 0.0666667, 1, 0.723295, 1.16164e-16, 0, 0.690539, 0.1, 1, 0.723294, 0.00166486, -1.3487e-10, 0.690538, 0.133333, 1, 0.72328, 0.0063564, -2.69742e-10, 0.690525, 0.166667, 1, 0.723212, 0.015133, 0, 0.69046, 0.2, 1, 0.723021, 0.0275309, 0, 0.690277, 0.233333, 1, 0.722679, 0.0412678, -1.62038e-09, 0.689951, 0.266667, 1, 0.722183, 0.0554261, -1.62038e-09, 0.689478, 0.3, 1, 0.721567, 0.0690944, -1.08258e-09, 0.688889, 0.333333, 1, 0.720897, 0.0813688, -5.4127e-09, 0.688249, 0.366667, 1, 0.720359, 0.090016, -5.41685e-09, 0.687736, 0.4, 1, 0.720049, 0.09463, -2.16713e-09, 0.68744, 0.433333, 1, 0.719971, 0.0957615, 0, 0.687366, 0.466667, 1, 0.720074, 0.094277, -1.08348e-09, 0.687463, 0.5, 1, 0.72027, 0.0913613, -5.41741e-09, 0.687651, 0.533333, 1, 0.720572, 0.0866954, -1.08349e-09, 0.687939, 0.566667, 1, 0.720928, 0.0808331, 0, 0.688279, 0.6, 1, 0.72132, 0.073852, 2.16295e-09, 0.688653, 0.633333, 1, 0.721726, 0.0658298, 3.78552e-09, 0.689041, 0.666667, 1, 0.722126, 0.0568452, -2.70175e-09, 0.689423, 0.7, 1, 0.722505, 0.0467401, 1.61967e-09, 0.689784, 0.733333, 1, 0.722828, 0.0359173, 2.7043e-10, 0.690094, 0.766667, 1, 0.723079, 0.0244618, -1.07939e-09, 0.690332, 0.8, 1, 0.723239, 0.01246, -5.39549e-10, 0.690485, 0.833333, 1, 0.723295, 0, 0, 0.690539, 0.866667, 1, 0.723236, -0.0128137, 1.07911e-09, 0.690482, 0.9, 1, 0.723061, -0.0254612, 5.39565e-10, 0.690315, 0.933333, 1, 0.722783, -0.0376164, 2.16029e-09, 0.69005, 0.966667, 1, 0.722428, -0.0489556, 4.3205e-09, 0.689711, 1, 1, 0.722028, -0.0591582, 0, 0.68933, 1.03333, 1, 0.721659, -0.0672159, 0, 0.688977, 1.06667, 1, 0.721355, -0.0731972, 3.24622e-09, 0.688687, 1.1, 1, 0.721159, -0.0767924, 1.08167e-09, 0.6885, 1.13333, 1, 0.721096, -0.0779134, -4.32907e-09, 0.68844, 1.16667, 1, 0.721165, -0.0766919, 0, 0.688505, 1.2, 1, 0.721349, -0.073312, 4.32719e-09, 0.688681, 1.23333, 1, 0.72159, -0.068632, 2.1636e-09, 0.688911, 1.26667, 1, 0.721864, -0.0628641, 1.08078e-09, 0.689173, 1.3, 1, 0.722151, -0.0562214, 1.0813e-09, 0.689447, 1.33333, 1, 0.722429, -0.0489182, -5.40122e-09, 0.689712, 1.4, 1, 0.722891, -0.0334079, 2.69895e-09, 0.690154, 1.43333, 1, 0.723053, -0.0258586, 1.61915e-09, 0.690308, 1.46667, 1, 0.723168, -0.0187394, 1.3488e-10, 0.690418, 1.5, 1, 0.723241, -0.0122706, 6.74395e-10, 0.690487, 1.53333, 1, 0.723277, -0.00710824, -4.04606e-10, 0.690522, 1.56667, 1, 0.723291, -0.00325426, -2.69742e-10, 0.690535, 1.6, 1, 0.723295, -0.000927207, 0, 0.690539, 1.70833, 1, 0.723295, 0, 0, 0.690539)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ubyqw"]
_data = {
"looping_swim": SubResource("Animation_bgbig"),
"swim": SubResource("Animation_0806g")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nsglc"]
radius = 0.244866
height = 0.489732

[sub_resource type="SphereMesh" id="SphereMesh_6ywp2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8g46q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_by2ur"]
height = 1.47304

[node name="cowboy_fish_boss" type="CharacterBody3D" node_paths=PackedStringArray("animationPlayer", "navAgent", "idleTimer", "debugSphere", "detectionBox", "navDetectionBox", "minigamePreloader")]
transform = Transform3D(0.3, 0, 0, 0, -1.31134e-08, -0.3, 0, 0.3, -1.31134e-08, 0, 0, 0)
script = ExtResource("1_notb4")
animationPlayer = NodePath("cowboy_fish_model/AnimationPlayer")
navAgent = NodePath("NavigationAgent3D")
idleTimer = NodePath("IdleTimer")
debugSphere = NodePath("MeshInstance3D")
detectionBox = NodePath("DetectionBox")
navDetectionBox = NodePath("NavDetectionBox")
minigamePreloader = NodePath("PossibleMinigameResources")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("2_gky5p")
state = NodePath("SpawnMoveState")

[node name="SpawnMoveState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("3_ucqs4")
actor = NodePath("../..")

[node name="cowboy_fish_model" parent="." instance=ExtResource("2_b38by")]
transform = Transform3D(-1, -1.50996e-07, 6.60023e-15, 0, -4.37114e-08, -1, 1.50996e-07, -1, 4.37114e-08, 0, 0, 0)

[node name="CowboyBoots_Mesh" parent="cowboy_fish_model/Armature/Skeleton3D" index="0"]
transform = Transform3D(-0.772305, -0.00371478, 0.0113171, -0.0032659, 0.771789, 0.0304638, -0.0114547, 0.0304123, -0.771713, 0.388403, -3.13362, -0.104029)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ubyqw")
}

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="DetectionBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 1.42109e-14, 0, -1.42109e-14, 1, 0, 0, 0)
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionBox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_nsglc")

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_6ywp2")

[node name="DestinationEnd" type="Area3D" parent="MeshInstance3D"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/DestinationEnd"]
shape = SubResource("SphereShape3D_8g46q")

[node name="NavDetectionBox" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavDetectionBox"]
shape = SubResource("CapsuleShape3D_by2ur")

[node name="PossibleMinigameResources" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("shoot_the_bottle_game"), [ExtResource("3_1ascm")]]

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="area_entered" from="DetectionBox" to="." method="_on_detection_box_area_entered"]
[connection signal="area_exited" from="DetectionBox" to="." method="_on_detection_box_area_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="area_entered" from="MeshInstance3D/DestinationEnd" to="." method="_on_destination_end_area_entered"]
[connection signal="area_entered" from="MeshInstance3D/DestinationEnd" to="FiniteStateMachine/SpawnMoveState" method="_on_destination_end_area_entered"]

[editable path="cowboy_fish_model"]
